added lock icon for i3lock

--- a/dotfiles/i3status.conf
+++ b/dotfiles/i3status.conf
@@ -15,14 +15,14 @@ general {
 #order += "disk /home/martin"
 #order += "ethernet _first_"
 #order += "run_watch DHCP"
+#order += "cpu_temperature 0"
+#order += "load"
 
 order += "tztime local"
 order += "wireless _first_"
 order += "volume master"
 order += "battery 0"
 order += "disk /home"
-order += "cpu_temperature 0"
-order += "load"
 
 wireless _first_ {
         format_up = " %essid %ip"
@@ -36,8 +36,11 @@ ethernet _first_ {
 }
 
 battery 0 {
-        format = " %percentage"
-
+        format = "%status %percentage"
+        threshold_type = "percentage"
+        low_threshold = "30"
+        status_bat = ""
+        status_chr = ""
 }
 
 disk "/home" {
@@ -54,7 +57,8 @@ run_watch VPN {
 }
 
 tztime local {
-        format = " %d-%m-%Y %H:%M:%S"
+        format = "%d-%m-%Y %H:%M:%S"
+	align = "left"
 }
 
 load {
