--- a/dotfiles/.i3rc
+++ b/dotfiles/.i3rc
@@ -120,9 +120,13 @@ bindsym $mod+a focus parent
 set $workspace1 " Terminals"
 set $workspace2 " Firefox"
 set $workspace3 " Files"
-set $workspace4 " Books"
+set $workspace4 " Books"
 set $workspace5 " VPN"
 set $workspace6 " Gimp"
+set $workspace7 " 7"
+set $workspace8 " 8"
+set $workspace9 " 9"
+set $workspace10 " 10"
 
 # switch to workspace
 bindsym $mod+1 workspace $workspace1
@@ -131,10 +135,10 @@ bindsym $mod+3 workspace $workspace3
 bindsym $mod+4 workspace $workspace4
 bindsym $mod+5 workspace $workspace5
 bindsym $mod+6 workspace $workspace6
-bindsym $mod+7 workspace 7
-bindsym $mod+8 workspace 8
-bindsym $mod+9 workspace 9
-bindsym $mod+0 workspace 10
+bindsym $mod+7 workspace $workspace7
+bindsym $mod+8 workspace $workspace8
+bindsym $mod+9 workspace $workspace9
+bindsym $mod+0 workspace $workspace10
 
 # move focused container to workspace
 bindsym $mod+Shift+1 move container to workspace $workspace1
@@ -143,10 +147,10 @@ bindsym $mod+Shift+3 move container to workspace $workspace3
 bindsym $mod+Shift+4 move container to workspace $workspace4
 bindsym $mod+Shift+5 move container to workspace $workspace5
 bindsym $mod+Shift+6 move container to workspace $workspace6
-bindsym $mod+Shift+7 move container to workspace 7
-bindsym $mod+Shift+8 move container to workspace 8
-bindsym $mod+Shift+9 move container to workspace 9
-bindsym $mod+Shift+0 move container to workspace 10
+bindsym $mod+Shift+7 move container to workspace $workspace7
+bindsym $mod+Shift+8 move container to workspace $workspace8
+bindsym $mod+Shift+9 move container to workspace $workspace9
+bindsym $mod+Shift+0 move container to workspace $workspace10
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
@@ -210,4 +214,4 @@ bar {
 }
 
 # Background
-#exec_always --no-startup-id /usr/bin/feh --bg-scale /home/hodeb/Pictures/Wallpapers/Bakgrunn.png
+exec_always --no-startup-id /usr/bin/feh --bg-scale /home/hodeb/Pictures/Wallpapers/Bakgrunn.png
