--- a/dotfiles/.i3rc
+++ b/dotfiles/.i3rc
@@ -32,7 +32,6 @@ floating_modifier $mod
 # start a terminal
 bindsym $mod+Return exec gnome-terminal --hide-menubar
 
-
 # start Firefox
 bindsym $mod+p exec firefox
 
@@ -59,9 +58,6 @@ bindsym $mod+m exec amixer -q sset Master toggle
 
 # Start Dropbox
 exec_always dropbox start
-
-# start dmenu (a program launcher)
-bindsym $mod+d exec dmenu_run -fn 'Roboto 6' -nb '#2f343f' -nf '#f3f4f5'
 
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
@@ -193,12 +189,15 @@ set $inactive-text-colour   #878E7D
 set $urgent-bg-colour       #E53935
 
 # Window colours
-client.focused                  $bg-colour          $bg-colour          $text-colour             #00ff00
-client.unfocused                $inactive-bg-colour $inactive-bg-colour $inactive-text-colour    #00ff00
-client.focused_inactive         $inactive-bg-colour $inactive-bg-colour $inactive-text-colour    #00ff00
-client.urgent $urgent-bg-colour $urgent-bg-colour   $bg-colour          $text-colour             #00ff00
+client.focused                  $bg-colour          $bg-colour          $text-colour             $bg-colour
+client.unfocused                $inactive-bg-colour $inactive-bg-colour $inactive-text-colour    $bg-colour
+client.focused_inactive         $inactive-bg-colour $inactive-bg-colour $inactive-text-colour    $bg-colour
+client.urgent $urgent-bg-colour $urgent-bg-colour   $bg-colour          $text-colour             $bg-colour
 
 hide_edge_borders both
+
+# start dmenu (a program launcher)
+bindsym $mod+d exec dmenu_run -fn 'Roboto 6' -nb $bg-colour -nf $text-colour
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
