--- a/dotfiles/i3status.conf
+++ b/dotfiles/i3status.conf
@@ -25,7 +25,7 @@ order += "battery 0"
 order += "disk /home"
 
 wireless _first_ {
-        format_up = " %essid %ip"
+        format_up = " %essid"
         format_down = " "
 }
 
@@ -57,7 +57,7 @@ run_watch VPN {
 }
 
 tztime local {
-        format = "%d-%m-%Y %H:%M:%S"
+        format = " %d-%m-%Y %H:%M:%S"
 	align = "left"
 }
 
