--- a/i3wm/.i3rc
+++ b/i3wm/.i3rc
@@ -222,9 +222,9 @@ bar {
 
 # Background
 # exec_always --no-startup-id /usr/bin/feh --bg-scale ~/Pictures/Wallpapers/Bakgrunn.png
-exec --no-startup-id bash ~/bgscript.sh
-
-exec compton -f --config ~/.config/compton.conf
+# exec --no-startup-id bash ~/bgscript.sh
+# exec compton -f --config ~/.config/compton.conf
+exec python ~/makesexy.py
 
 for_window [class="feh"] floating enable
 for_window [class="evince"] floating enable
