Made i3 automatically call the start script

--- a/i3wm/.i3rc
+++ b/i3wm/.i3rc
@@ -224,7 +224,8 @@ bar {
 # exec_always --no-startup-id /usr/bin/feh --bg-scale ~/Pictures/Wallpapers/Bakgrunn.png
 # exec --no-startup-id bash ~/bgscript.sh
 # exec compton -f --config ~/.config/compton.conf
-exec python ~/makesexy.py
+# exec python ~/makesexy.py
+exec python ~/starti3.py
 
 for_window [class="feh"] floating enable
 for_window [class="evince"] floating enable
