qutebrowser styling, starti3 updating

--- a/qutebrowser/qutebrowser.conf
+++ b/qutebrowser/qutebrowser.conf
@@ -1041,6 +1041,8 @@ hide-unmatched-rapid-hints = true
 # signs.
 [searchengines]
 DEFAULT = https://duckduckgo.com/?q={}
+y = https://youtube.com/results?search_query={}
+aw = https://wiki.archlinux.org/?search={}
 
 
 # Aliases for commands.
@@ -1389,7 +1391,7 @@ downloads.bg.error = red
 #     Background color for webpages if unset (or empty to use the
 #     theme's color)
 #     Default: white
-webpage.bg = #f3f4f5
+webpage.bg = #2f343f
 
 # keyhint.fg (QssColor):
 #     Text color for the keyhint widget.
