--- a/i3wm/compton.conf
+++ b/i3wm/compton.conf
@@ -3,4 +3,5 @@ opacity-rule = [
     "85:name *= 'emacs'",
     "75:class_g *= 'Nautilus'",
     "100:class_g *= 'Firefox'"
+    "100:class_g *= 'Qutebrowser'"
     ];
