--- a/i3wm/compton.conf
+++ b/i3wm/compton.conf
@@ -2,6 +2,6 @@ opacity-rule = [
     "85:class_g *= 'Gnome-terminal'",
     "85:name *= 'emacs'",
     "75:class_g *= 'Nautilus'",
-    "100:class_g *= 'Firefox'"
-    "100:class_g *= 'Qutebrowser'"
+    "100:class_g *= 'Firefox'",
+    "85:name *= 'qutebrowser'"
     ];
