--- a/i3wm/.i3rc
+++ b/i3wm/.i3rc
@@ -13,7 +13,7 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:roboto 8
+font pango:roboto mono medium 12
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -30,13 +30,16 @@ font pango:roboto 8
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec gnome-terminal --hide-menubar
+bindsym $mod+Return exec termite
 
 # start Firefox
 bindsym $mod+p exec firefox
 
 # start Qutebrowser
 bindsym $mod+t exec qutebrowser
+
+# hide mouse
+bindsym $mod+Escape exec python3 ~/hide-mouse.py
 
 # start Evince
 bindsym $mod+e exec evince
@@ -54,6 +57,9 @@ bindsym --release $mod+x exec --no-startup-id import /tmp/latest-screenshot.png
 # start Nautilus
 bindsym $mod+n exec nautilus
 
+# start Ranger
+bindsym $mod+c exec termite -e ranger
+
 # kill focused window
 bindsym $mod+q kill
 
@@ -69,7 +75,7 @@ bindsym $mod+m exec amixer -q sset Master toggle
 exec_always dropbox start
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec dmenu_run -fn 'Roboto 6' -nb '#2f343f' -nf '#f3f4f5'
+bindsym $mod+d exec dmenu_run -fn 'roboto mono bold medium 12' -nb '#2f343f' -nf '#f3f4f5'
 
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
@@ -152,6 +158,8 @@ bindsym $mod+9 workspace $workspace9
 bindsym $mod+0 workspace $workspace10
 
 # move focused container to workspace
+bindsym $mod+Shift+a move container to workspace prev
+bindsym $mod+Shift+s move container to workspace next
 bindsym $mod+Shift+1 move container to workspace $workspace1
 bindsym $mod+Shift+2 move container to workspace $workspace2
 bindsym $mod+Shift+3 move container to workspace $workspace3
@@ -216,7 +224,6 @@ client.urgent $urgent-bg-colour $urgent-bg-colour   $bg-colour          $text-co
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-        #status_command i3status
         status_command python3 ~/.i3pystatus.py
         colors {
             background $bg-colour
@@ -225,15 +232,9 @@ bar {
             urgent_workspace    $urgent-bg-colour       $urgent-bg-colour    $text-colour
         }
         position top
-        # font pango:roboto 10
-        font pango:roboto mono medium 11
+        font pango:roboto mono medium 12
 }
 
-# Background
-# exec_always --no-startup-id /usr/bin/feh --bg-scale ~/Pictures/Wallpapers/Bakgrunn.png
-# exec --no-startup-id bash ~/bgscript.sh
-# exec compton -f --config ~/.config/compton.conf
-# exec python ~/makesexy.py
 exec python3 ~/starti3.py
 
 for_window [class="feh"] floating enable
