--- a/i3wm/compton.conf
+++ b/i3wm/compton.conf
@@ -1,7 +1,8 @@
 opacity-rule = [
-    "85:class_g *= 'Gnome-terminal'",
+    "85:class_g *= 'Termite'",
     "85:name *= 'emacs'",
-    "75:class_g *= 'Nautilus'",
-    "100:class_g *= 'Firefox'",
-    "85:name *= 'qutebrowser'"
+    "85:class_g *= 'Nautilus'",
+    "85:name *= 'qutebrowser'",
+    "85:name *= 'mupdf'",
+    "100:class_g *= 'Firefox'"
     ];
