--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -375,9 +375,9 @@ map pL paste_symlink relative=True
 map phl paste_hardlink
 map pht paste_hardlinked_subtree
 
-map dD console delete
+map dd delete
 
-map dd cut
+map dc cut
 map ud uncut
 map da cut mode=add
 map dr cut mode=remove
@@ -453,7 +453,7 @@ map oA chain set sort=atime;     set sort_reverse=True
 map oT chain set sort=type;      set sort_reverse=True
 map oE chain set sort=extension; set sort_reverse=True
 
-map dc get_cumulative_size
+# map dc get_cumulative_size
 
 # Settings
 map zc    set collapse_preview!
@@ -613,4 +613,5 @@ copytmap <ESC> q Q w <C-c>
 
 # Custom keybinds
 map ,m cd /run/media/martin/PornBank/torrents
-map ,p cd /run/media/martin/PornBank/Programming
+map ,p cd /run/media/martin/PornBank/
+map ,d cd ~/Downloads/
