--- a/i3wm/compton.conf
+++ b/i3wm/compton.conf
@@ -3,6 +3,6 @@ opacity-rule = [
     "85:name *= 'emacs'",
     "85:class_g *= 'Nautilus'",
     "85:name *= 'qutebrowser'",
-    "85:name *= 'mupdf'",
+    "85:class_g *= 'mupdf'",
     "100:class_g *= 'Firefox'"
     ];
