--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -613,5 +613,8 @@ copytmap <ESC> q Q w <C-c>
 
 # Custom keybinds
 map ,m cd /run/media/martin/PornBank/torrents
-map ,p cd /run/media/martin/PornBank/
-map ,d cd ~/Downloads/
+map ,p cd /run/media/martin/PornBank
+map ,hp cd ~/Pictures
+map ,d cd ~/Downloads
+map ,t cd /tmp
+map ,a console mkdir%space
