--- a/transmission/settings.json
+++ b/transmission/settings.json
@@ -12,7 +12,7 @@
     "blocklist-url": "http://www.example.com/blocklist",
     "cache-size-mb": 4,
     "dht-enabled": true,
-    "download-dir": "/home/martin/Downloads",
+    "download-dir": "/run/media/martin/PornBank/torrents",
     "download-queue-enabled": true,
     "download-queue-size": 5,
     "encryption": 1,
@@ -54,10 +54,10 @@
     "script-torrent-done-filename": "",
     "seed-queue-enabled": false,
     "seed-queue-size": 10,
-    "speed-limit-down": 100,
-    "speed-limit-down-enabled": false,
-    "speed-limit-up": 100,
-    "speed-limit-up-enabled": false,
+    "speed-limit-down": 800,
+    "speed-limit-down-enabled": true,
+    "speed-limit-up": 70,
+    "speed-limit-up-enabled": true,
     "start-added-torrents": true,
     "trash-original-torrent-files": false,
     "umask": 18,
