--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -361,7 +361,7 @@ map yn shell -f echo -n %f    | xsel -i; xsel -o | xsel -i -b
 # Filesystem Operations
 map =  chmod
 
-map cw console rename%space
+# map cw console rename%space
 map a  rename_append
 map A  eval fm.open_console('rename ' + fm.thisfile.relative_path.replace("%", "%%"))
 map I  eval fm.open_console('rename ' + fm.thisfile.relative_path.replace("%", "%%"), position=7)
@@ -612,9 +612,17 @@ tmap <ESC> taskview_close
 copytmap <ESC> q Q w <C-c>
 
 # Custom keybinds
-map ,m cd /run/media/martin/PornBank/torrents
-map ,p cd /run/media/martin/PornBank
-map ,hp cd ~/Pictures
-map ,d cd ~/Downloads
 map ,t cd /tmp
 map ,a console mkdir%space
+map ,o console open_with%space
+map ,z  eval fm.open_console('shell zip .zip *', position=10)
+
+map ,pp cd /run/media/martin/PornBank
+map ,pt cd /run/media/martin/PornBank/torrents
+map ,pg cd /run/media/martin/PornBank/Programming
+
+map ,hh cd ~/
+map ,hd cd ~/Downloads
+map ,hp cd ~/Pictures
+map ,hg cd ~/Documents
+map ,hk cd ~/python/kivy/cc-kivy-program
