setup for jQuery dev

--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -615,14 +615,17 @@ copytmap <ESC> q Q w <C-c>
 map ,t cd /tmp
 map ,a console mkdir%space
 map ,o console open_with%space
-map ,z  eval fm.open_console('shell zip .zip *', position=10)
+map ,z eval fm.open_console('shell zip .zip *', position=10)  # TODO: extend to zip marked files
+map ,r eval fm.source(fm.confpath('rc.conf'))
 
 map ,pp cd /run/media/martin/PornBank
 map ,pt cd /run/media/martin/PornBank/torrents
 map ,pg cd /run/media/martin/PornBank/Programming
+map ,pm cd /run/media/martin/PornBank/music
 
 map ,hh cd ~/
 map ,hd cd ~/Downloads
 map ,hp cd ~/Pictures
 map ,hg cd ~/Documents
 map ,hk cd ~/python/kivy/cc-kivy-program
+map ,hs cd ~/Sync
