--- a/ranger/rifle.conf
+++ b/ranger/rifle.conf
@@ -116,51 +116,52 @@ ext midi?,        terminal, has wildmidi = wildmidi -- "$@"
 #--------------------------------------------
 # Video/Audio with a GUI
 #-------------------------------------------
-mime ^video|audio, has gmplayer, X, flag f = gmplayer -- "$@"
-mime ^video|audio, has smplayer, X, flag f = smplayer "$@"
+# mime ^video|audio, has gmplayer, X, flag f = gmplayer -- "$@"
+# mime ^video|audio, has smplayer, X, flag f = smplayer "$@"
 mime ^video,       has mpv,      X, flag f = mpv -- "$@"
-mime ^video,       has mpv,      X, flag f = mpv --fs -- "$@"
-mime ^video,       has mplayer2, X, flag f = mplayer2 -- "$@"
-mime ^video,       has mplayer2, X, flag f = mplayer2 -fs -- "$@"
-mime ^video,       has mplayer,  X, flag f = mplayer -- "$@"
-mime ^video,       has mplayer,  X, flag f = mplayer -fs -- "$@"
+# mime ^video,       has mpv,      X, flag f = mpv --fs -- "$@"
+# mime ^video,       has mplayer2, X, flag f = mplayer2 -- "$@"
+# mime ^video,       has mplayer2, X, flag f = mplayer2 -fs -- "$@"
+# mime ^video,       has mplayer,  X, flag f = mplayer -- "$@"
+# mime ^video,       has mplayer,  X, flag f = mplayer -fs -- "$@"
 mime ^video|audio, has vlc,      X, flag f = vlc -- "$@"
-mime ^video|audio, has totem,    X, flag f = totem -- "$@"
-mime ^video|audio, has totem,    X, flag f = totem --fullscreen -- "$@"
+# mime ^video|audio, has totem,    X, flag f = totem -- "$@"
+# mime ^video|audio, has totem,    X, flag f = totem --fullscreen -- "$@"
 
 #--------------------------------------------
 # Video without X:
 #-------------------------------------------
 mime ^video, terminal, !X, has mpv       = mpv -- "$@"
-mime ^video, terminal, !X, has mplayer2  = mplayer2 -- "$@"
-mime ^video, terminal, !X, has mplayer   = mplayer -- "$@"
+# mime ^video, terminal, !X, has mplayer2  = mplayer2 -- "$@"
+# mime ^video, terminal, !X, has mplayer   = mplayer -- "$@"
 
 #-------------------------------------------
 # Documents
 #-------------------------------------------
-ext pdf, has llpp,     X, flag f = llpp "$@"
-ext pdf, has zathura,  X, flag f = zathura -- "$@"
+# ext pdf, has llpp,     X, flag f = llpp "$@"
+# ext pdf, has zathura,  X, flag f = zathura -- "$@"
 ext pdf, has mupdf,    X, flag f = mupdf "$@"
-ext pdf, has mupdf-x11,X, flag f = mupdf-x11 "$@"
-ext pdf, has apvlv,    X, flag f = apvlv -- "$@"
-ext pdf, has xpdf,     X, flag f = xpdf -- "$@"
-ext pdf, has evince,   X, flag f = evince -- "$@"
-ext pdf, has atril,    X, flag f = atril -- "$@"
-ext pdf, has okular,   X, flag f = okular -- "$@"
-ext pdf, has epdfview, X, flag f = epdfview -- "$@"
-ext pdf, has qpdfview, X, flag f = qpdfview "$@"
+ext epub, has mupdf,    X, flag f = mupdf "$@"
+# ext pdf, has mupdf-x11,X, flag f = mupdf-x11 "$@"
+# ext pdf, has apvlv,    X, flag f = apvlv -- "$@"
+# ext pdf, has xpdf,     X, flag f = xpdf -- "$@"
+# ext pdf, has evince,   X, flag f = evince -- "$@"
+# ext pdf, has atril,    X, flag f = atril -- "$@"
+# ext pdf, has okular,   X, flag f = okular -- "$@"
+# ext pdf, has epdfview, X, flag f = epdfview -- "$@"
+# ext pdf, has qpdfview, X, flag f = qpdfview "$@"
 
-ext docx?, has catdoc,       terminal = catdoc -- "$@" | "$PAGER"
+# ext docx?, has catdoc,       terminal = catdoc -- "$@" | "$PAGER"
 
-ext                        sxc|xlsx?|xlt|xlw|gnm|gnumeric, has gnumeric,    X, flag f = gnumeric -- "$@"
-ext                        sxc|xlsx?|xlt|xlw|gnm|gnumeric, has kspread,     X, flag f = kspread -- "$@"
-ext pptx?|od[dfgpst]|docx?|sxc|xlsx?|xlt|xlw|gnm|gnumeric, has libreoffice, X, flag f = libreoffice "$@"
-ext pptx?|od[dfgpst]|docx?|sxc|xlsx?|xlt|xlw|gnm|gnumeric, has soffice,     X, flag f = soffice "$@"
-ext pptx?|od[dfgpst]|docx?|sxc|xlsx?|xlt|xlw|gnm|gnumeric, has ooffice,     X, flag f = ooffice "$@"
+# ext                        sxc|xlsx?|xlt|xlw|gnm|gnumeric, has gnumeric,    X, flag f = gnumeric -- "$@"
+# ext                        sxc|xlsx?|xlt|xlw|gnm|gnumeric, has kspread,     X, flag f = kspread -- "$@"
+# ext pptx?|od[dfgpst]|docx?|sxc|xlsx?|xlt|xlw|gnm|gnumeric, has libreoffice, X, flag f = libreoffice "$@"
+# ext pptx?|od[dfgpst]|docx?|sxc|xlsx?|xlt|xlw|gnm|gnumeric, has soffice,     X, flag f = soffice "$@"
+# ext pptx?|od[dfgpst]|docx?|sxc|xlsx?|xlt|xlw|gnm|gnumeric, has ooffice,     X, flag f = ooffice "$@"
 
-ext djvu, has zathura,X, flag f = zathura -- "$@"
+# ext djvu, has zathura,X, flag f = zathura -- "$@"
 ext djvu, has evince, X, flag f = evince -- "$@"
-ext djvu, has atril,  X, flag f = atril -- "$@"
+# ext djvu, has atril,  X, flag f = atril -- "$@"
 
 #-------------------------------------------
 # Image Viewing:
@@ -168,15 +169,16 @@ ext djvu, has atril,  X, flag f = atril -- "$@"
 mime ^image/svg, has inkscape, X, flag f = inkscape -- "$@"
 mime ^image/svg, has display,  X, flag f = display -- "$@"
 
-mime ^image, has pqiv,      X, flag f = pqiv -- "$@"
-mime ^image, has sxiv,      X, flag f = sxiv -- "$@"
+# mime ^image, has pqiv,      X, flag f = pqiv -- "$@"
+# mime ^image, has sxiv,      X, flag f = sxiv -- "$@"
 mime ^image, has feh,       X, flag f = feh -- "$@"
-mime ^image, has mirage,    X, flag f = mirage -- "$@"
-mime ^image, has ristretto, X, flag f = ristretto "$@"
-mime ^image, has eog,       X, flag f = eog -- "$@"
-mime ^image, has eom,       X, flag f = eom -- "$@"
-mime ^image, has gimp,      X, flag f = gimp -- "$@"
+# mime ^image, has mirage,    X, flag f = mirage -- "$@"
+# mime ^image, has ristretto, X, flag f = ristretto "$@"
+# mime ^image, has eog,       X, flag f = eog -- "$@"
+# mime ^image, has eom,       X, flag f = eom -- "$@"
+# mime ^image, has gimp,      X, flag f = gimp -- "$@"
 ext xcf,                    X, flag f = gimp -- "$@"
+ext kra,                    X, flag f = krita -- "$@"
 
 #-------------------------------------------
 # Archives
@@ -191,8 +193,8 @@ ext 7z|ace|ar|arc|bz2?|cab|cpio|cpt|deb|dgc|dmg|gz,  has aunpack = aunpack -- "$
 ext iso|jar|msi|pkg|rar|shar|tar|tgz|xar|xpi|xz|zip, has aunpack = aunpack -- "$@"
 
 # Fallback:
-ext tar|gz, has tar = tar vvtf "$@" | "$PAGER"
-ext tar|gz, has tar = tar vvxf "$@"
+# ext tar|gz, has tar = tar vvtf "$@" | "$PAGER"
+# ext tar|gz, has tar = tar vvxf "$@"
 
 #-------------------------------------------
 # Misc
