--- a/i3wm/compton.conf
+++ b/i3wm/compton.conf
@@ -1,8 +1,8 @@
 opacity-rule = [
-    "85:class_g *= 'Termite'",
+    # "85:class_g *= 'Termite'",
     "85:name *= 'emacs'",
     "85:class_g *= 'Nautilus'",
     "85:name *= 'qutebrowser'",
-    "85:class_g *= 'Mupdf'",
+    "85:class_g *= 'mupdf'",
     "100:class_g *= 'Firefox'"
     ];
