--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -613,6 +613,7 @@ copytmap <ESC> q Q w <C-c>
 
 # Custom keybinds
 map ,t cd /tmp
+map ,m cd /run/media
 map ,a console mkdir%space
 map ,o console open_with%space
 map ,z eval fm.open_console('shell zip .zip *', position=10)  # TODO: extend to zip marked files
