--- a/i3wm/.i3rc
+++ b/i3wm/.i3rc
@@ -59,6 +59,7 @@ bindsym $mod+y exec xbacklight -inc 10
 
 # Print screen
 bindsym --release $mod+x exec --no-startup-id import /tmp/latest-screenshot.png
+bindsym --release $mod+shift+x exec scrot /tmp/latest-fullscreenshot.png
 
 # start Ranger
 bindsym $mod+c exec termite -e ranger
