--- a/i3wm/compton.conf
+++ b/i3wm/compton.conf
@@ -1,11 +1,11 @@
 opacity-rule = [
-    # "85:class_g *= 'Termite'",
     "85:class_g *= 'mupdf'",
     "85:class_g *= 'Nautilus'",
+    "85:class_g *= 'calibre'",
+    "85:class_g *= 'ebook-viewer'",
+    "85:class_g *= 'Steam'",
     "85:name *= 'emacs'",
     "85:name *= 'qutebrowser'",
     "85:name *= 'VirtualBox'",
-    "85:name *= 'steam'",
-    "85:name *= 'calibre-ebook-viewer'",
-    "85:name *= 'steamwebhelper'",
+    "85:name *= 'rofi'",
     ];
