--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -245,7 +245,7 @@ alias travel     scout -aefiklst
 
 # Basic
 map     Q quit!
-map     q quit
+map     q shell $SHELL
 copymap q ZZ ZQ
 
 map R     reload_cwd
@@ -363,7 +363,7 @@ map =  chmod
 
 # map cw console rename%space
 map a  rename_append
-map A  eval fm.open_console('rename ' + fm.thisfile.relative_path.replace("%", "%%"))
+map A  eval fm.open_console('rename ')
 map I  eval fm.open_console('rename ' + fm.thisfile.relative_path.replace("%", "%%"), position=7)
 
 map pp paste
@@ -616,19 +616,36 @@ map ,t cd /tmp
 map ,m cd /run/media/martin
 map ,a console mkdir%space
 map ,o console open_with%space
-map ,z eval fm.open_console('shell zip .zip *', position=10)  # TODO: extend to zip marked files
 map ,r eval fm.source(fm.confpath('rc.conf'))
+map ,z eval fm.open_console('shell zip .zip *', position=10)  # TODO: extend to zip marked files
+map ,c  eval fm.open_console('shell pandoc -o ' + fm.thisfile.relative_path.split('.')[0] + '. ' + fm.thisfile.relative_path, position=17+len(fm.thisfile.relative_path.split('.')[0]))
+
 
 map ,pp cd /run/media/martin/PornBank
+
 map ,pt cd /run/media/martin/PornBank/torrents
+
 map ,pg cd /run/media/martin/PornBank/Programming
+
 map ,pm cd /run/media/martin/PornBank/music
+map ,Pm shell termite -e 'ranger --selectfile=/run/media/martin/PornBank/music' &
+
 map ,pa cd /run/media/martin/PornBank/ART
+
 map ,pg cd /run/media/martin/PornBank/godot
 
+map ,pb cd /run/media/martin/PornBank/books
+
+
+
 map ,hh cd ~/
+
 map ,hd cd ~/Downloads
+
 map ,hp cd ~/python
+
 map ,hP cd ~/Pictures
+
 map ,hg cd ~/Documents
+
 map ,hs cd ~/Sync
