--- a/ranger/rifle.conf
+++ b/ranger/rifle.conf
@@ -83,10 +83,10 @@ ext x?html?, has w3m,             terminal = w3m "$@"
 # Misc
 #-------------------------------------------
 # Define the "editor" for text files as first action
-mime ^text,  label editor = emacsclient "$@"
+mime ^text,  label editor = vim "$@"
 mime ^text,  label pager  = "$PAGER" -- "$@"
-!mime ^text, label editor, ext xml|json|csv|tex|py|pl|rb|js|sh|php = $EDITOR -- "$@"
-!mime ^text, label pager,  ext xml|json|csv|tex|py|pl|rb|js|sh|php = "$PAGER" -- "$@"
+!mime ^text, label editor, ext org|xml|json|csv|tex|py|pl|rb|js|sh|php = $EDITOR -- "$@"
+# !mime ^text, label pager,  ext xml|json|csv|tex|py|pl|rb|js|sh|php = "$PAGER" -- "$@"
 
 ext 1                         = man "$1"
 ext s[wmf]c, has zsnes, X     = zsnes "$1"
@@ -118,13 +118,13 @@ ext midi?,        terminal, has wildmidi = wildmidi -- "$@"
 #-------------------------------------------
 # mime ^video|audio, has gmplayer, X, flag f = gmplayer -- "$@"
 # mime ^video|audio, has smplayer, X, flag f = smplayer "$@"
-mime ^video,       has mpv,      X, flag f = mpv -- "$@"
+mime ^video|audio    has mpv,      X, flag f = mpv -- "$@"
 # mime ^video,       has mpv,      X, flag f = mpv --fs -- "$@"
 # mime ^video,       has mplayer2, X, flag f = mplayer2 -- "$@"
 # mime ^video,       has mplayer2, X, flag f = mplayer2 -fs -- "$@"
 # mime ^video,       has mplayer,  X, flag f = mplayer -- "$@"
 # mime ^video,       has mplayer,  X, flag f = mplayer -fs -- "$@"
-mime ^video|audio, has vlc,      X, flag f = vlc -- "$@"
+# mime ^video|audio, has vlc,      X, flag f = vlc -- "$@"
 # mime ^video|audio, has totem,    X, flag f = totem -- "$@"
 # mime ^video|audio, has totem,    X, flag f = totem --fullscreen -- "$@"
 
@@ -141,7 +141,7 @@ mime ^video, terminal, !X, has mpv       = mpv -- "$@"
 # ext pdf, has llpp,     X, flag f = llpp "$@"
 # ext pdf, has zathura,  X, flag f = zathura -- "$@"
 ext pdf, has mupdf,    X, flag f = mupdf "$@"
-ext epub, has mupdf,    X, flag f = epub-viewer "$@"
+ext epub, has ebook-viewer,    X, flag f = ebook-viewer "$@"
 # ext epub, has mupdf,    X, flag f = mupdf "$@"
 # ext pdf, has mupdf-x11,X, flag f = mupdf-x11 "$@"
 # ext pdf, has apvlv,    X, flag f = apvlv -- "$@"
@@ -186,10 +186,10 @@ ext kra,                    X, flag f = krita -- "$@"
 #-------------------------------------------
 
 # avoid password prompt by providing empty password
-ext 7z, has 7z = 7z -p l "$@" | "$PAGER"
+# ext 7z, has 7z = 7z -p l "$@" | "$PAGER"
 # This requires atool
-ext ace|ar|arc|bz2?|cab|cpio|cpt|deb|dgc|dmg|gz,  has als     = als -- "$@" | "$PAGER"
-ext iso|jar|msi|pkg|rar|shar|tar|tgz|xar|xpi|xz|zip, has als     = als -- "$@" | "$PAGER"
+# ext ace|ar|arc|bz2?|cab|cpio|cpt|deb|dgc|dmg|gz,  has als     = als -- "$@" | "$PAGER"
+# ext iso|jar|msi|pkg|rar|shar|tar|tgz|xar|xpi|xz|zip, has als     = als -- "$@" | "$PAGER"
 ext 7z|ace|ar|arc|bz2?|cab|cpio|cpt|deb|dgc|dmg|gz,  has aunpack = aunpack -- "$@"
 ext iso|jar|msi|pkg|rar|shar|tar|tgz|xar|xpi|xz|zip, has aunpack = aunpack -- "$@"
 
@@ -206,9 +206,9 @@ label wallpaper, number 13, mime ^image, has feh, X = feh --bg-center "$1"
 label wallpaper, number 14, mime ^image, has feh, X = feh --bg-fill "$1"
 
 # Define the editor for non-text files + pager as last action
-              !mime ^text, !ext xml|json|csv|tex|py|pl|rb|js|sh|php  = ask
+              # !mime ^text, !ext xml|json|csv|tex|py|pl|rb|js|sh|php  = ask
 label editor, !mime ^text, !ext xml|json|csv|tex|py|pl|rb|js|sh|php  = $EDITOR -- "$@"
-label pager,  !mime ^text, !ext xml|json|csv|tex|py|pl|rb|js|sh|php  = "$PAGER" -- "$@"
+# label pager,  !mime ^text, !ext xml|json|csv|tex|py|pl|rb|js|sh|php  = "$PAGER" -- "$@"
 
 # The very last action, so that it's never triggered accidentally, is to execute a program:
 mime application/x-executable = "$1"
