cool stuff and stuff ofc

--- a/.gitignore
+++ b/.gitignore
@@ -8,4 +8,9 @@ tmp*
 #*
 *#
 *.pyc
+.emacs.d/elpa
+.emacs.d/auto-save-list
+.emacs.d/.python-environments
+.emacs.d/eshell
+.emacs.d/request
 .flycheck*
