--- a/i3wm/.i3rc
+++ b/i3wm/.i3rc
@@ -207,6 +207,27 @@ bindsym $mod+r mode ""
 # COLL
 # unused colours: #272b33 #282c34 #383c4a
 # bg color without transparency: #292d36
+# '(("atom-one-dark-accent"   . "#528BFF")
+#   ("atom-one-dark-fg"       . "#ABB2BF")
+#   ("atom-one-dark-bg"       . "#272b33")
+#   ("atom-one-dark-bg-1"     . "#121417")
+#   ("atom-one-dark-bg-hl"    . "#2F343D")
+#   ("atom-one-dark-gutter"   . "#666D7A")
+#   ("atom-one-dark-accent"   . "#AEB9F5")
+#   ("atom-one-dark-mono-1"   . "#ABB2BF")
+#   ("atom-one-dark-mono-2"   . "#828997")
+#   ("atom-one-dark-mono-3"   . "#5C6370")
+#   ("atom-one-dark-cyan"     . "#56B6C2")
+#   ("atom-one-dark-blue"     . "#61AFEF")
+#   ("atom-one-dark-purple"   . "#C678DD")
+#   ("atom-one-dark-green"    . "#98C379")
+#   ("atom-one-dark-red-1"    . "#E06C75")
+#   ("atom-one-dark-red-2"    . "#BE5046")
+#   ("atom-one-dark-orange-1" . "#D19A66")
+#   ("atom-one-dark-orange-2" . "#E5C07B")
+#   ("atom-one-dark-gray"     . "#3E4451")
+#   ("atom-one-dark-silver"   . "#AAAAAA")
+#   ("atom-one-dark-black"    . "#0F1011"))
 
 
 # set $accent               #87ac70
@@ -235,6 +256,8 @@ for_window [title="Network Connections"] floating enable
 
 for_window [class="^.*"] border pixel 1
 hide_edge_borders both
+
+exec_always bash ~/run_polybar.sh
 
 assign [class="Steam"] → ""
 
