--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -620,32 +620,40 @@ map ,r eval fm.source(fm.confpath('rc.conf'))
 map ,z eval fm.open_console('shell zip .zip *', position=10)  # TODO: extend to zip marked files
 map ,c  eval fm.open_console('shell pandoc -o ' + fm.thisfile.relative_path.split('.')[0] + '. ' + fm.thisfile.relative_path, position=17+len(fm.thisfile.relative_path.split('.')[0]))
 
-
 map ,pp cd /run/media/martin/PornBank
+map ,Pp shell termite -e 'ranger --cmd="cd /run/media/martin/PornBank"' &
 
 map ,pt cd /run/media/martin/PornBank/torrents
+map ,Pt shell termite -e 'ranger --cmd="cd /run/media/martin/PornBank/torrents"' &
 
 map ,pg cd /run/media/martin/PornBank/Programming
+map ,Pg shell termite -e 'ranger --cmd="cd /run/media/martin/PornBank/Programming"' &
 
 map ,pm cd /run/media/martin/PornBank/music
-map ,Pm shell termite -e 'ranger --selectfile=/run/media/martin/PornBank/music' &
+map ,Pm shell termite -e 'ranger --cmd="cd /run/media/martin/PornBank/music"' &
 
 map ,pa cd /run/media/martin/PornBank/ART
-
-map ,pg cd /run/media/martin/PornBank/godot
+map ,Pa shell termite -e 'ranger --cmd="cd /run/media/martin/PornBank/ART"' &
 
 map ,pb cd /run/media/martin/PornBank/books
+map ,Pb shell termite -e 'ranger --cmd="cd /run/media/martin/PornBank/books"' &
 
 
 
 map ,hh cd ~/
+map ,Hh shell termite -e 'ranger --cmd="cd ~/"' &
 
 map ,hd cd ~/Downloads
+map ,Hd shell termite -e 'ranger --cmd="cd ~/Downloads"' &
 
 map ,hp cd ~/python
+map ,Hp shell termite -e 'ranger --cmd="cd ~/python"' &
 
 map ,hP cd ~/Pictures
+map ,HP shell termite -e 'ranger --cmd="cd ~/Pictures"' &
 
 map ,hg cd ~/Documents
+map ,Hg shell termite -e 'ranger --cmd="cd ~/Documents"' &
 
 map ,hs cd ~/Sync
+map ,Hs shell termite -e 'ranger --cmd="cd ~/Sync"' &
