--- a/i3wm/.i3rc
+++ b/i3wm/.i3rc
@@ -44,8 +44,8 @@ bindsym $mod+Escape exec python3 ~/hide-mouse.py
 # dropdown terminal
 bindsym $mod+n exec python3 ~/spawn-terminal.py
 
-# start Krita
-bindsym $mod+p exec krita
+# toggle sexy
+bindsym $mod+p exec python3 ~/pydaemon.py
 
 # start Emacs
 bindsym $mod+z exec emacs
@@ -118,7 +118,7 @@ bindsym $mod+f fullscreen toggle
 # change container layout (stacked, tabbed, toggle split)
 # bindsym $mod+s layout stacking
 bindsym $mod+w layout tabbed
-# bindsym $mod+e layout toggle split
+bindsym $mod+shift+w layout toggle split
 
 # toggle tiling / floating
 bindsym $mod+Shift+space floating toggle
@@ -258,6 +258,7 @@ for_window [class="^.*"] border pixel 1
 hide_edge_borders both
 
 exec_always bash ~/run_polybar.sh
+exec python3 ~/pydaemon.py
 
 assign [class="Steam"] → ""
 
