--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -619,6 +619,7 @@ map ,o console open_with%space
 map ,r eval fm.source(fm.confpath('rc.conf'))
 map ,z eval fm.open_console('shell zip .zip *', position=10)  # TODO: extend to zip marked files
 map ,c  eval fm.open_console('shell pandoc -o ' + fm.thisfile.relative_path.split('.')[0] + '. ' + fm.thisfile.relative_path, position=17+len(fm.thisfile.relative_path.split('.')[0]))
+map ,l  eval fm.open_console('shell ln -s ' + fm.thisfile.path + ' ')
 
 map ,pp cd /run/media/martin/PornBank
 map ,Pp shell termite -e 'ranger --cmd="cd /run/media/martin/PornBank"' &
