--- a/i3wm/compton.conf
+++ b/i3wm/compton.conf
@@ -5,6 +5,8 @@ opacity-rule = [
     "85:class_g *= 'ebook-viewer'",
     "85:class_g *= 'Steam'",
     "85:name *= 'emacs'",
+    "85:name *= 'godot'",
+    "85:name *= 'discord-canary'",
     "85:name *= 'qutebrowser'",
     "85:name *= 'VirtualBox'",
     "100:name *= 'rofi'",
