--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -362,8 +362,6 @@ map yn shell -f echo -n %f    | xsel -i; xsel -o | xsel -i -b
 map =  chmod
 
 # map cw console rename%space
-map a  rename_append
-map A  eval fm.open_console('rename ')
 map I  eval fm.open_console('rename ' + fm.thisfile.relative_path.replace("%", "%%"), position=7)
 
 map pp paste
@@ -612,49 +610,54 @@ tmap <ESC> taskview_close
 copytmap <ESC> q Q w <C-c>
 
 # Custom keybinds
+map a  eval fm.open_console('rename .' + fm.thisfile.relative_path.split('.')[-1], position=7)
+map A  rename_append
+
 map ,t cd /tmp
-map ,m cd /run/media/martin
+map ,m eval cmd('shell mpv --no-video "{}"'.format(fm.thisfile.relative_path))
+map ,e eval cmd('shell vim "{}"'.format(fm.thisfile.relative_path))
 map ,a console mkdir%space
 map ,o console open_with%space
 map ,r eval fm.source(fm.confpath('rc.conf'))
+map ,u eval fm.open_console('shell unzip "{}" -d '.format(fm.thisfile.relative_path))
 map ,z eval fm.open_console('shell zip .zip *', position=10)  # TODO: extend to zip marked files
 map ,c  eval fm.open_console('shell pandoc -o ' + fm.thisfile.relative_path.split('.')[0] + '. ' + fm.thisfile.relative_path, position=17+len(fm.thisfile.relative_path.split('.')[0]))
 map ,l  eval fm.open_console('shell ln -s ' + fm.thisfile.path + ' ')
 
 map ,pp cd /run/media/martin/PornBank
-map ,Pp shell termite -e 'ranger --cmd="cd /run/media/martin/PornBank"' &
+map ,Pp shell nohup termite -e 'ranger --cmd="cd /run/media/martin/PornBank"' &
 
 map ,pt cd /run/media/martin/PornBank/torrents
-map ,Pt shell termite -e 'ranger --cmd="cd /run/media/martin/PornBank/torrents"' &
+map ,Pt shell nohup termite -e 'ranger --cmd="cd /run/media/martin/PornBank/torrents"' &
 
 map ,pg cd /run/media/martin/PornBank/Programming
-map ,Pg shell termite -e 'ranger --cmd="cd /run/media/martin/PornBank/Programming"' &
+map ,Pg shell nohup termite -e 'ranger --cmd="cd /run/media/martin/PornBank/Programming"' &
 
 map ,pm cd /run/media/martin/PornBank/music
-map ,Pm shell termite -e 'ranger --cmd="cd /run/media/martin/PornBank/music"' &
+map ,Pm shell nohup termite -e 'ranger --cmd="cd /run/media/martin/PornBank/music"' &
 
 map ,pa cd /run/media/martin/PornBank/ART
-map ,Pa shell termite -e 'ranger --cmd="cd /run/media/martin/PornBank/ART"' &
+map ,Pa shell nohup termite -e 'ranger --cmd="cd /run/media/martin/PornBank/ART"' &
 
 map ,pb cd /run/media/martin/PornBank/books
-map ,Pb shell termite -e 'ranger --cmd="cd /run/media/martin/PornBank/books"' &
+map ,Pb shell nohup termite -e 'ranger --cmd="cd /run/media/martin/PornBank/books"' &
 
 
 
 map ,hh cd ~/
-map ,Hh shell termite -e 'ranger --cmd="cd ~/"' &
+map ,Hh shell nohup termite -e 'ranger --cmd="cd ~/"' &
 
 map ,hd cd ~/Downloads
-map ,Hd shell termite -e 'ranger --cmd="cd ~/Downloads"' &
+map ,Hd shell nohup termite -e 'ranger --cmd="cd ~/Downloads"' &
 
 map ,hp cd ~/python
-map ,Hp shell termite -e 'ranger --cmd="cd ~/python"' &
+map ,Hp shell nohup termite -e 'ranger --cmd="cd ~/python"' &
 
 map ,hP cd ~/Pictures
-map ,HP shell termite -e 'ranger --cmd="cd ~/Pictures"' &
+map ,HP shell nohup termite -e 'ranger --cmd="cd ~/Pictures"' &
 
 map ,hg cd ~/Documents
-map ,Hg shell termite -e 'ranger --cmd="cd ~/Documents"' &
+map ,Hg shell nohup termite -e 'ranger --cmd="cd ~/Documents"' &
 
 map ,hs cd ~/Sync
-map ,Hs shell termite -e 'ranger --cmd="cd ~/Sync"' &
+map ,Hs shell nohup termite -e 'ranger --cmd="cd ~/Sync"' &
