stuff and things

--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -622,42 +622,43 @@ map ,r eval fm.source(fm.confpath('rc.conf'))
 map ,u eval fm.open_console('shell unzip "{}" -d '.format(fm.thisfile.relative_path))
 map ,z eval fm.open_console('shell zip .zip *', position=10)  # TODO: extend to zip marked files
 map ,c  eval fm.open_console('shell pandoc -o ' + fm.thisfile.relative_path.split('.')[0] + '. ' + fm.thisfile.relative_path, position=17+len(fm.thisfile.relative_path.split('.')[0]))
+map ,C  eval fm.open_console('shell convert ' + fm.thisfile.relative_path + ' ')
 map ,l  eval fm.open_console('shell ln -s ' + fm.thisfile.path + ' ')
 
 map ,pp cd /run/media/martin/PornBank
-map ,Pp shell nohup termite -e 'ranger --cmd="cd /run/media/martin/PornBank"' &
+map ,Pp shell nohup termite -e 'ranger --cmd="cd /run/media/martin/PornBank"' & rm nohup.out &
 
 map ,pt cd /run/media/martin/PornBank/torrents
-map ,Pt shell nohup termite -e 'ranger --cmd="cd /run/media/martin/PornBank/torrents"' &
+map ,Pt shell nohup termite -e 'ranger --cmd="cd /run/media/martin/PornBank/torrents"' & rm nohup.out &
 
 map ,pg cd /run/media/martin/PornBank/Programming
-map ,Pg shell nohup termite -e 'ranger --cmd="cd /run/media/martin/PornBank/Programming"' &
+map ,Pg shell nohup termite -e 'ranger --cmd="cd /run/media/martin/PornBank/Programming"' & rm nohup.out &
 
 map ,pm cd /run/media/martin/PornBank/music
-map ,Pm shell nohup termite -e 'ranger --cmd="cd /run/media/martin/PornBank/music"' &
+map ,Pm shell nohup termite -e 'ranger --cmd="cd /run/media/martin/PornBank/music"' & rm nohup.out &
 
 map ,pa cd /run/media/martin/PornBank/ART
-map ,Pa shell nohup termite -e 'ranger --cmd="cd /run/media/martin/PornBank/ART"' &
+map ,Pa shell nohup termite -e 'ranger --cmd="cd /run/media/martin/PornBank/ART"' & rm nohup.out &
 
 map ,pb cd /run/media/martin/PornBank/books
-map ,Pb shell nohup termite -e 'ranger --cmd="cd /run/media/martin/PornBank/books"' &
+map ,Pb shell nohup termite -e 'ranger --cmd="cd /run/media/martin/PornBank/books"' & rm nohup.out &
 
 
 
 map ,hh cd ~/
-map ,Hh shell nohup termite -e 'ranger --cmd="cd ~/"' &
+map ,Hh shell nohup termite -e 'ranger --cmd="cd ~/"' & rm nohup.out &
 
 map ,hd cd ~/Downloads
-map ,Hd shell nohup termite -e 'ranger --cmd="cd ~/Downloads"' &
+map ,Hd shell nohup termite -e 'ranger --cmd="cd ~/Downloads"' & rm nohup.out &
 
 map ,hp cd ~/python
-map ,Hp shell nohup termite -e 'ranger --cmd="cd ~/python"' &
+map ,Hp shell nohup termite -e 'ranger --cmd="cd ~/python"' & rm nohup.out &
 
 map ,hP cd ~/Pictures
-map ,HP shell nohup termite -e 'ranger --cmd="cd ~/Pictures"' &
+map ,HP shell nohup termite -e 'ranger --cmd="cd ~/Pictures"' & rm nohup.out &
 
 map ,hg cd ~/Documents
-map ,Hg shell nohup termite -e 'ranger --cmd="cd ~/Documents"' &
+map ,Hg shell nohup termite -e 'ranger --cmd="cd ~/Documents"' & rm nohup.out &
 
 map ,hs cd ~/Sync
-map ,Hs shell nohup termite -e 'ranger --cmd="cd ~/Sync"' &
+map ,Hs shell nohup termite -e 'ranger --cmd="cd ~/Sync"' & rm nohup.out &
