--- a/i3wm/compton.conf
+++ b/i3wm/compton.conf
@@ -10,4 +10,5 @@ opacity-rule = [
     "85:name *= 'qutebrowser'",
     "85:name *= 'VirtualBox'",
     "100:name *= 'rofi'",
+    "100:name *= 'firefox'",
     ];
