--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -245,7 +245,7 @@ alias travel     scout -aefiklst
 
 # Basic
 map     Q quit!
-map     q shell $SHELL
+map     q quit!
 copymap q ZZ ZQ
 
 map R     reload_cwd
@@ -610,7 +610,7 @@ tmap <ESC> taskview_close
 copytmap <ESC> q Q w <C-c>
 
 # Custom keybinds
-map a  eval fm.open_console('rename .' + fm.thisfile.relative_path.split('.')[-1], position=7)
+map a eval fm.execute_console('bulkrename') if fm.thisdir.marked_items else fm.open_console('rename .' + fm.thisfile.relative_path.split('.')[-1], position=7)
 map A  rename_append
 
 map ,t cd /tmp
@@ -619,11 +619,12 @@ map ,e eval cmd('shell vim "{}"'.format(fm.thisfile.relative_path))
 map ,a console mkdir%space
 map ,o console open_with%space
 map ,r eval fm.source(fm.confpath('rc.conf'))
-map ,u eval fm.open_console('shell unzip "{}" -d '.format(fm.thisfile.relative_path))
+map ,u eval fm.open_console('shell unzip "{}" -d ""'.format(fm.thisfile.relative_path), position=len(fm.thisfile.relative_path) + 19)
 map ,z eval fm.open_console('shell zip .zip *', position=10)  # TODO: extend to zip marked files
 map ,c  eval fm.open_console('shell pandoc -o ' + fm.thisfile.relative_path.split('.')[0] + '. ' + fm.thisfile.relative_path, position=17+len(fm.thisfile.relative_path.split('.')[0]))
 map ,C  eval fm.open_console('shell convert ' + fm.thisfile.relative_path + ' ')
 map ,l  eval fm.open_console('shell ln -s ' + fm.thisfile.path + ' ')
+
 
 map ,pp cd /run/media/martin/PornBank
 map ,Pp shell nohup termite -e 'ranger --cmd="cd /run/media/martin/PornBank"' & rm nohup.out &
@@ -644,7 +645,6 @@ map ,pb cd /run/media/martin/PornBank/books
 map ,Pb shell nohup termite -e 'ranger --cmd="cd /run/media/martin/PornBank/books"' & rm nohup.out &
 
 
-
 map ,hh cd ~/
 map ,Hh shell nohup termite -e 'ranger --cmd="cd ~/"' & rm nohup.out &
 
@@ -662,3 +662,6 @@ map ,Hg shell nohup termite -e 'ranger --cmd="cd ~/Documents"' & rm nohup.out &
 
 map ,hs cd ~/Sync
 map ,Hs shell nohup termite -e 'ranger --cmd="cd ~/Sync"' & rm nohup.out &
+
+map ,hr cd /run/media
+map ,Hr shell nohup termite -e 'ranger --cmd="cd run/media"' & rm nohup.out &
