--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -245,7 +245,7 @@ alias travel     scout -aefiklst
 
 # Basic
 map     Q quit!
-map     q quit!
+map     q shell $SHELL
 copymap q ZZ ZQ
 
 map R     reload_cwd
@@ -610,7 +610,8 @@ tmap <ESC> taskview_close
 copytmap <ESC> q Q w <C-c>
 
 # Custom keybinds
-map a eval fm.execute_console('bulkrename') if fm.thisdir.marked_items else fm.open_console('rename .' + fm.thisfile.relative_path.split('.')[-1], position=7)
+map a eval fm.open_console('rename .' + fm.thisfile.relative_path.split('.')[-1], position=7) if len(fm.thisfile.relative_path.split('.')) > 1 else fm.open_console('rename ', position=7)
+map b  bulkrename
 map A  rename_append
 
 map ,t cd /tmp
