--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -245,8 +245,9 @@ alias travel     scout -aefiklst
 
 # Basic
 map     Q quit!
-map     q shell $SHELL
-copymap q ZZ ZQ
+map     q quit!
+# map     q shell $SHELL
+# copymap q ZZ ZQ
 
 map R     reload_cwd
 map <C-r> reset
