--- a/i3wm/.i3rc
+++ b/i3wm/.i3rc
@@ -40,7 +40,7 @@ bindsym --release $mod+x exec --no-startup-id import /tmp/latest-screenshot.png
 bindsym --release $mod+shift+x exec scrot /tmp/latest-fullscreenshot.png
 
 # start Ranger
-bindsym $mod+c exec termite -e ranger
+bindsym $mod+c exec termite -e "ranger"
 
 # kill focused window
 bindsym $mod+q kill
@@ -231,7 +231,7 @@ assign [class="Steam"]       → ""
 assign [class="emacs"]       → ""
 assign [class="qutebrowser"] → ""
 
-gaps inner 10
-gaps outer 11
+gaps inner 15
+gaps outer 10
 # smart_gaps on
 # smart_borders on
