--- a/i3wm/compton.conf
+++ b/i3wm/compton.conf
@@ -7,7 +7,7 @@ opacity-rule = [
     "85:name *= 'emacs'",
     "85:name *= 'godot'",
     "85:name *= 'discord-canary'",
-    # "85:name *= 'qutebrowser'",
+    "85:name *= 'qutebrowser'",
     "85:name *= 'VirtualBox'",
     "100:name *= 'rofi'",
     "100:name *= 'firefox'",
