--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -627,43 +627,19 @@ map ,c  eval fm.open_console('shell pandoc -o ' + fm.thisfile.relative_path.spli
 map ,C  eval fm.open_console('shell convert ' + fm.thisfile.relative_path + ' ')
 map ,l  eval fm.open_console('shell ln -s ' + fm.thisfile.path + ' ')
 
-
 map ,pp cd /run/media/martin/PornBank
-map ,Pp shell nohup termite -e 'ranger --cmd="cd /run/media/martin/PornBank"' & rm nohup.out &
-
 map ,pt cd /run/media/martin/PornBank/torrents
-map ,Pt shell nohup termite -e 'ranger --cmd="cd /run/media/martin/PornBank/torrents"' & rm nohup.out &
-
 map ,pg cd /run/media/martin/PornBank/Programming
-map ,Pg shell nohup termite -e 'ranger --cmd="cd /run/media/martin/PornBank/Programming"' & rm nohup.out &
-
+map ,pd cd /run/media/martin/PornBank/dokumenter
 map ,pm cd /run/media/martin/PornBank/music
-map ,Pm shell nohup termite -e 'ranger --cmd="cd /run/media/martin/PornBank/music"' & rm nohup.out &
-
 map ,pa cd /run/media/martin/PornBank/ART
-map ,Pa shell nohup termite -e 'ranger --cmd="cd /run/media/martin/PornBank/ART"' & rm nohup.out &
-
 map ,pb cd /run/media/martin/PornBank/books
-map ,Pb shell nohup termite -e 'ranger --cmd="cd /run/media/martin/PornBank/books"' & rm nohup.out &
-
 
 map ,hh cd ~/
-map ,Hh shell nohup termite -e 'ranger --cmd="cd ~/"' & rm nohup.out &
-
 map ,hd cd ~/Downloads
-map ,Hd shell nohup termite -e 'ranger --cmd="cd ~/Downloads"' & rm nohup.out &
-
 map ,hp cd ~/python
-map ,Hp shell nohup termite -e 'ranger --cmd="cd ~/python"' & rm nohup.out &
-
+map ,hc cd ~/cpp
 map ,hP cd ~/Pictures
-map ,HP shell nohup termite -e 'ranger --cmd="cd ~/Pictures"' & rm nohup.out &
-
 map ,hg cd ~/Documents
-map ,Hg shell nohup termite -e 'ranger --cmd="cd ~/Documents"' & rm nohup.out &
-
 map ,hs cd ~/Sync
-map ,Hs shell nohup termite -e 'ranger --cmd="cd ~/Sync"' & rm nohup.out &
-
 map ,hr cd /run/media
-map ,Hr shell nohup termite -e 'ranger --cmd="cd run/media"' & rm nohup.out &
