--- a/i3wm/.i3rc
+++ b/i3wm/.i3rc
@@ -26,7 +26,7 @@ bindsym $mod+Escape exec python3 ~/hide-mouse.py
 bindsym $mod+n exec python3 ~/spawn-terminal.py
 
 # toggle sexy
-bindsym $mod+p exec python3 ~/pydaemon.py
+bindsym $mod+p exec python3 ~/makesexy.py
 
 # start Emacs
 bindsym $mod+z exec emacs
