--- a/i3wm/.i3rc
+++ b/i3wm/.i3rc
@@ -225,7 +225,7 @@ bindsym --release button2 kill
 
 exec_always bash ~/run_polybar.sh
 exec feh --bg-scale ~/bg/0.png
-exec python3 ~/pydaemon.py
+exec python3 ~/makesexy.py on
 
 assign [class="Steam"]       → ""
 assign [class="emacs"]       → ""
