made i3_pyautogui_bindings use i3-py to start programs

--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -638,6 +638,7 @@ map ,pb cd /run/media/martin/PornBank/books
 map ,hh cd ~/
 map ,hd cd ~/Downloads
 map ,hp cd ~/python
+map ,hb cd ~/books
 map ,hc cd ~/cpp
 map ,hP cd ~/Pictures
 map ,hg cd ~/Documents
