too many changes

--- a/qutebrowser/qsettings/QtProject.conf
+++ b/qutebrowser/qsettings/QtProject.conf
@@ -1,8 +1,8 @@
 [FileDialog]
-history=file:///run/media/martin/PornBank/dokumenter, file:///tmp, file:///home/martin, file:///home/martin/Sync/Jobb/cv, file:///home/martin/Downloads
+history=@Invalid()
 lastVisited=file:///home/martin/Sync/Jobb/cv
-qtVersion=5.12.0
+qtVersion=5.12.2
 shortcuts=file:, file:///home/martin
 sidebarWidth=90
-treeViewHeader=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x2{\0\0\0\x4\x1\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0_\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\x4\0\0\x1\x8e\0\0\0\x1\0\0\0\0\0\0\0?\0\0\0\x1\0\0\0\0\0\0\0@\0\0\0\x1\0\0\0\0\0\0\0n\0\0\0\x1\0\0\0\0\0\0\x3\xe8\0\xff\xff\xff\xff)
+treeViewHeader=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x2{\0\0\0\x4\x1\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x62\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\x4\0\0\x1\x8e\0\0\0\x1\0\0\0\0\0\0\0?\0\0\0\x1\0\0\0\0\0\0\0@\0\0\0\x1\0\0\0\0\0\0\0n\0\0\0\x1\0\0\0\0\0\0\x3\xe8\0\xff\xff\xff\xff)
 viewMode=Detail
