--- a/i3wm/.i3rc
+++ b/i3wm/.i3rc
@@ -20,7 +20,7 @@ bindsym $mod+t exec qutebrowser
 bindsym $mod+Tab exec python3 ~/toggle-keymap.py
 
 # hide mouse
-# bindsym $mod+Escape exec python3 ~/hide-mouse.py
+bindsym $mod+Escape exec python3 ~/center_mouse.py
 
 # dropdown terminal
 bindsym $mod+n exec python3 ~/spawn-terminal.py
@@ -29,7 +29,7 @@ bindsym $mod+n exec python3 ~/spawn-terminal.py
 bindsym $mod+p exec python3 ~/makesexy.py
 
 # start Emacs
-bindsym $mod+z exec emacs
+bindsym $mod+z exec emacsclient -a "" -c -n
 
 # Change light level
 bindsym $mod+u exec xbacklight -dec 10
@@ -101,7 +101,7 @@ set $workspace3  ""
 set $workspace4  ""
 set $workspace5  ""
 set $workspace6  ""
-set $workspace7  ""
+set $workspace7  ""
 set $workspace8  ""
 set $workspace9  ""
 set $workspace10 ""
@@ -136,10 +136,12 @@ bindsym $mod+Shift+0 move container to workspace $workspace10
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
+
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $mod+Shift+r restart
+
 # exit i3 (logs you out of your X session)
-bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
+bindsym $mod+Shift+q exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
 
 # resize window (you can also use the mouse for that)
 mode "" {
@@ -207,17 +209,21 @@ client.unfocused        $inactive-bg-colour $inactive-bg-colour $inactive-text-c
 client.focused_inactive $inactive-bg-colour $inactive-bg-colour $inactive-text-colour    $preview-colour
 client.urgent           $urgent-bg-colour   $bg-colour          $text-colour             $preview-colour
 
+exec start_jack
 exec python3 ~/starti3.py
 
 # for_window [class="feh"]     floating enable
 for_window [class="evince"]  floating enable
 for_window [class="python3"] floating enable
+for_window [class="python"] floating enable
 for_window [class="tkinter"] floating enable
 for_window [class="godot"]   floating enable
 for_window [class="godot3"]  floating enable
 # for_window [class="Emacs"]  floating enable
 for_window [title="Network Connections"] floating enable
 for_window [title="QTTestApp"] floating enable
+for_window [title="main.py"] floating enable
+for_window [title="matplotlib"] floating enable
 
 default_border pixel 0
 hide_edge_borders both
@@ -227,7 +233,8 @@ exec_always bash ~/run_polybar.sh
 exec feh --bg-scale ~/bg/0.png
 exec python3 ~/makesexy.py on
 
-assign [class="Steam"]       → ""
+assign [class="Steam"]       → ""
+assign [class="Lutris"]      → ""
 assign [class="emacs"]       → ""
 assign [class="qutebrowser"] → ""
 
