--- a/qutebrowser/autoconfig.yml
+++ b/qutebrowser/autoconfig.yml
@@ -5,8 +5,8 @@ config_version: 2
 settings:
   aliases:
     global:
-      q: quit
+      q: close
+      qa: quit
       w: session-save
       wq: quit --save
-  content.user_stylesheets:
-    global: onedark-all-sites.css
+      wqa: quit --save
