--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -616,13 +616,14 @@ map b  bulkrename
 map A  rename_append
 
 map ,m eval cmd('shell mpv --no-video "{}"'.format(fm.thisfile.relative_path))
+map ,v eval cmd('shell mpv "{}"'.format(fm.thisfile.relative_path))
 map ,e eval cmd('shell vim "{}"'.format(fm.thisfile.relative_path))
 map ,E eval cmd('shell emacsclient -cn "{}" && i3-msg workspace ""'.format(fm.thisfile.relative_path))
 map ,a console mkdir%space
 map ,o console open_with%space
 map ,R eval fm.source(fm.confpath('rc.conf'))
 map ,u eval fm.open_console('shell unzip "{}" -d ""'.format(fm.thisfile.relative_path), position=len(fm.thisfile.relative_path) + 19)
-map ,z eval fm.open_console('shell zip .zip *', position=10)  # TODO: extend to zip marked files
+map ,z eval fm.open_console('shell zip ".zip" *', position=11)  # TODO: extend to zip marked files
 map ,c  eval fm.open_console('shell pandoc -o ' + fm.thisfile.relative_path.split('.')[0] + '. ' + fm.thisfile.relative_path, position=17+len(fm.thisfile.relative_path.split('.')[0]))
 map ,C  eval fm.open_console('shell convert ' + fm.thisfile.relative_path + ' ')
 map ,l  eval fm.open_console('shell ln -s ' + fm.thisfile.path + ' ')
