--- a/qutebrowser/autoconfig.yml
+++ b/qutebrowser/autoconfig.yml
@@ -3,10 +3,5 @@
 
 config_version: 2
 settings:
-  aliases:
-    global:
-      q: close
-      qa: quit
-      w: session-save
-      wq: quit --save
-      wqa: quit --save
+  content.notifications:
+    https://www.reddit.com: false
