more math snippets for orgmode/latex

--- a/i3wm/compton.conf
+++ b/i3wm/compton.conf
@@ -4,8 +4,8 @@ opacity-rule = [
     "85:class_g *= 'calibre'",
     "85:class_g *= 'ebook-viewer'",
     "85:class_g *= 'Steam'",
-    "85:name *= 'emacs'",
-    "85:name *= 'qutebrowser'",
+    "85:class_g *= 'Emacs'",
+    "100:name *= 'qutebrowser'",
     "85:name *= 'godot'",
     "85:name *= 'discord-canary'",
     "85:name *= 'VirtualBox'",
