Lots of stuff i dont even know half of it

--- a/qutebrowser/qsettings/QtProject.conf
+++ b/qutebrowser/qsettings/QtProject.conf
@@ -1,8 +1,8 @@
 [FileDialog]
-history=@Invalid()
-lastVisited=file:///home/martin/Sync/Jobb/cv
-qtVersion=5.12.2
-shortcuts=file:, file:///home/martin
+history=file:///run/media/martin/PornBank/ART/music/ardour projects/Albums/Hidden Legacy, file:///run/media/martin/PornBank/ART/Krita, file:///run/media/martin/PornBank/ART/music/ardour projects/ToBeMastered/nicosamplelok, file:///run/media/martin/PornBank/ART/music/ardour projects/Singles/Skeiv Skog, file:///run/media/martin/PornBank/ART/music/ardour projects/Singles/Skeiv Skog/tmp, file:///run/media/martin/PornBank/olive/hodeb youtube/Boneworks ep 1
+lastVisited=file:///run/media/martin/PornBank/olive/hodeb youtube/Boneworks ep 1
+qtVersion=5.13.2
+shortcuts=file:, file:///home/martin, file:///run/media/martin/PornBank/ART/music/ardour projects
 sidebarWidth=90
 treeViewHeader=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x2{\0\0\0\x4\x1\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x62\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\x4\0\0\x1\x8e\0\0\0\x1\0\0\0\0\0\0\0?\0\0\0\x1\0\0\0\0\0\0\0@\0\0\0\x1\0\0\0\0\0\0\0n\0\0\0\x1\0\0\0\0\0\0\x3\xe8\0\xff\xff\xff\xff)
 viewMode=Detail
