--- a/i3wm/.i3rc
+++ b/i3wm/.i3rc
@@ -37,7 +37,7 @@ bindsym $mod+y exec xbacklight -inc 10
 
 # Print screen
 bindsym --release $mod+x exec --no-startup-id import /tmp/latest-screenshot.png
-bindsym --release $mod+shift+x exec scrot /tmp/latest-fullscreenshot.png
+bindsym --release $mod+shift+x exec python3 ~/take_screenshot.py
 
 # start Ranger
 bindsym $mod+c exec python3 ~/startRanger.py
@@ -209,20 +209,21 @@ client.unfocused        $inactive-bg-colour $inactive-bg-colour $inactive-text-c
 client.focused_inactive $inactive-bg-colour $inactive-bg-colour $inactive-text-colour    $preview-colour
 client.urgent           $urgent-bg-colour   $bg-colour          $text-colour             $preview-colour
 
-exec python3 ~/starti3.py
+exec python3 ~/new-starti3.py
 
-# for_window [class="feh"]     floating enable
-for_window [class="evince"]  floating enable
-for_window [class="python3"] floating enable
-for_window [class="python"] floating enable
-for_window [class="tkinter"] floating enable
-for_window [class="godot"]   floating enable
-for_window [class="godot3"]  floating enable
-# for_window [class="Emacs"]  floating enable
+for_window [class="tkinter"]             floating enable
+for_window [class="python3"]             floating enable
+for_window [class="godot3"]              floating enable
+for_window [class="python"]              floating enable
+for_window [class="evince"]              floating enable
+for_window [class="Thunar"]              floating enable
+for_window [class="godot"]               floating enable
+for_window [class="mpv"]                 floating enable
+for_window [title="QTTestApp"]           floating enable
+for_window [title="main.py"]             floating enable
+for_window [title="matplotlib"]          floating enable
 for_window [title="Network Connections"] floating enable
-for_window [title="QTTestApp"] floating enable
-for_window [title="main.py"] floating enable
-for_window [title="matplotlib"] floating enable
+for_window [title="forcefloat"]          floating enable
 
 default_border pixel 0
 hide_edge_borders both
@@ -232,11 +233,14 @@ exec_always bash ~/run_polybar.sh
 exec feh --bg-scale ~/bg/0.png
 exec python3 ~/makesexy.py on
 
-assign [class="Steam"]       → ""
-assign [class="Lutris"]      → ""
-assign [class="emacs"]       → ""
-assign [class="qutebrowser"] → ""
-assign [class="Ardour"]      → ""
+assign [class="Steam"]       → $workspace7
+assign [class="Lutris"]      → $workspace7
+assign [class="emacs"]       → $workspace3
+assign [class="qutebrowser"] → $workspace2
+assign [class="Ardour"]      → $workspace10
+assign [class="Rack"]        → $workspace10
+assign [class="cadence"]     → $workspace9
+assign [class="discord"]     → $workspace8
 
 gaps inner 15
 gaps outer 10
