--- a/ranger/rifle.conf
+++ b/ranger/rifle.conf
@@ -109,7 +109,7 @@ ext php = php -- "$1"
 #--------------------------------------------
 # Audio without X
 #-------------------------------------------
-mime ^audio|ogg$, terminal, has mpv      = mpv -- "$@"
+mime ^audio|ogg$, terminal, has mpv      = mpv --ao=jack -- "$@"
 mime ^audio|ogg$, terminal, has mplayer2 = mplayer2 -- "$@"
 mime ^audio|ogg$, terminal, has mplayer  = mplayer -- "$@"
 ext midi?,        terminal, has wildmidi = wildmidi -- "$@"
@@ -119,7 +119,7 @@ ext midi?,        terminal, has wildmidi = wildmidi -- "$@"
 #-------------------------------------------
 # mime ^video|audio, has gmplayer, X, flag f = gmplayer -- "$@"
 # mime ^video|audio, has smplayer, X, flag f = smplayer "$@"
-mime ^video|audio    has mpv,      X, flag f = mpv -- "$@"
+mime ^video|audio    has mpv,      X, flag f = mpv --ao=jack -- "$@"
 # mime ^video,       has mpv,      X, flag f = mpv --fs -- "$@"
 # mime ^video,       has mplayer2, X, flag f = mplayer2 -- "$@"
 # mime ^video,       has mplayer2, X, flag f = mplayer2 -fs -- "$@"
@@ -132,7 +132,7 @@ mime ^video|audio    has mpv,      X, flag f = mpv -- "$@"
 #--------------------------------------------
 # Video without X:
 #-------------------------------------------
-mime ^video, terminal, !X, has mpv       = mpv -- "$@"
+mime ^video, terminal, !X, has mpv       = mpv --ao=jack -- "$@"
 # mime ^video, terminal, !X, has mplayer2  = mplayer2 -- "$@"
 # mime ^video, terminal, !X, has mplayer   = mplayer -- "$@"
 
