ranger can now unrar

--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -629,6 +629,7 @@ map ,t  console touch%space
 
 map ,ut eval fm.open_console('shell tar -xvf "{}"'.format(fm.thisfile.relative_path), position=len(fm.thisfile.relative_path) + 17)
 map ,uz eval fm.open_console('shell unzip "{}" -d ""'.format(fm.thisfile.relative_path), position=len(fm.thisfile.relative_path) + 19)
+map ,ur eval fm.open_console('shell unrar x "{}"'.format(fm.thisfile.relative_path), position=len(fm.thisfile.relative_path) + 19)
 map ,z eval fm.open_console('shell zip ".zip" *', position=11)  # TODO: extend to zip marked files
 
 map ,pp cd /run/media/martin/PornBank
