--- a/i3wm/.i3rc
+++ b/i3wm/.i3rc
@@ -230,8 +230,9 @@ hide_edge_borders both
 bindsym --release button2 kill
 
 exec_always bash ~/run_polybar.sh
-exec feh --bg-scale ~/bg/0.png
-exec python3 ~/makesexy.py on
+exec_always picom -f -c -C -z -G -o 4 --inactive-dim 0.1 --config .config/compton.conf
+exec feh --bg-scale ~/bg/bg.png
+exec python3 ~/makesexy.py off
 
 assign [class="Steam"]       → $workspace7
 assign [class="Lutris"]      → $workspace7
