--- a/transmission/settings.json
+++ b/transmission/settings.json
@@ -57,7 +57,7 @@
     "seed-queue-enabled": false,
     "seed-queue-size": 10,
     "speed-limit-down": 2000,
-    "speed-limit-down-enabled": true,
+    "speed-limit-down-enabled": false,
     "speed-limit-up": 300,
     "speed-limit-up-enabled": true,
     "start-added-torrents": true,
